[gd_scene load_steps=5 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://transparent.png" type="Texture" id=2]

[sub_resource type="Theme" id=1]


[sub_resource type="ImageTexture" id=2]

flags = 7
image = Image()
size = Vector2( 0, 0 )
storage = 0
lossy_quality = 0.7

[node name="main" type="HBoxContainer"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 10.0
margin/bottom = 10.0
alignment = 0
script/script = ExtResource( 1 )

[node name="tools" type="Panel" parent="."]

rect/min_size = Vector2( 448, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 448.0
margin/bottom = 780.0

[node name="scroll" type="ScrollContainer" parent="tools"]

anchor/right = 1
anchor/bottom = 1
rect/min_size = Vector2( 432, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 1 )
margin/left = 8.0
margin/top = 8.0
margin/right = 8.0
margin/bottom = 8.0
scroll/horizontal = false
scroll/vertical = true

[node name="box" type="VBoxContainer" parent="tools/scroll"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 432.0
margin/bottom = 764.0
alignment = 0

[node name="file_label" type="Label" parent="tools/scroll/box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 432.0
margin/bottom = 14.0
text = "Current Spine:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="file_separator" type="HSeparator" parent="tools/scroll/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 18.0
margin/right = 432.0
margin/bottom = 21.0

[node name="file_path" type="LineEdit" parent="tools/scroll/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 25.0
margin/right = 432.0
margin/bottom = 49.0
placeholder/alpha = 0.6
editable = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="file_open_btn" type="Button" parent="tools/scroll/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 53.0
margin/right = 432.0
margin/bottom = 73.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Open file"
flat = false

[node name="misc" type="HBoxContainer" parent="tools/scroll/box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 77.0
margin/right = 432.0
margin/bottom = 210.0
alignment = 0

[node name="options" type="VBoxContainer" parent="tools/scroll/box/misc"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 214.0
margin/bottom = 133.0
alignment = 0

[node name="opts_label" type="Label" parent="tools/scroll/box/misc/options"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 214.0
margin/bottom = 14.0
text = "Options:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="opts_separator" type="HSeparator" parent="tools/scroll/box/misc/options"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 18.0
margin/right = 214.0
margin/bottom = 21.0

[node name="opts_debug_bones" type="CheckBox" parent="tools/scroll/box/misc/options"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 25.0
margin/right = 214.0
margin/bottom = 48.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Show Bones"
flat = false
align = 0

[node name="opts_debug_region" type="CheckBox" parent="tools/scroll/box/misc/options"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 52.0
margin/right = 214.0
margin/bottom = 75.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Show Regions"
flat = false
align = 0

[node name="opts_debug_mesh" type="CheckBox" parent="tools/scroll/box/misc/options"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 79.0
margin/right = 214.0
margin/bottom = 102.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Show Meshes"
flat = false
align = 0

[node name="info" type="VBoxContainer" parent="tools/scroll/box/misc"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 218.0
margin/top = 0.0
margin/right = 432.0
margin/bottom = 133.0
alignment = 0

[node name="info_label" type="Label" parent="tools/scroll/box/misc/info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 214.0
margin/bottom = 14.0
text = "Stats:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="info_separator" type="HSeparator" parent="tools/scroll/box/misc/info"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 18.0
margin/right = 214.0
margin/bottom = 21.0

[node name="info_load" type="SpinBox" parent="tools/scroll/box/misc/info"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 25.0
margin/right = 214.0
margin/bottom = 49.0
custom_icons/updown = SubResource( 2 )
range/min = 0.0
range/max = 10000.0
range/step = 0.01
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
editable = false
prefix = "Load time: "
suffix = "msec"

[node name="info_size" type="SpinBox" parent="tools/scroll/box/misc/info"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 53.0
margin/right = 214.0
margin/bottom = 77.0
custom_icons/updown = SubResource( 2 )
range/min = 0.0
range/max = 10000.0
range/step = 0.01
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
editable = false
prefix = "Size: "
suffix = "Kb"

[node name="info_size_factor" type="SpinBox" parent="tools/scroll/box/misc/info"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 81.0
margin/right = 214.0
margin/bottom = 105.0
custom_icons/updown = SubResource( 2 )
range/min = 0.0
range/max = 10000.0
range/step = 0.01
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
editable = false
prefix = "Size factor: "
suffix = ""

[node name="info_animation" type="SpinBox" parent="tools/scroll/box/misc/info"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 109.0
margin/right = 214.0
margin/bottom = 133.0
custom_icons/updown = SubResource( 2 )
range/min = 0.0
range/max = 10000.0
range/step = 0.01
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
editable = false
prefix = "Animate time: "
suffix = ""

[node name="anim_file_delim" type="Control" parent="tools/scroll/box"]

rect/min_size = Vector2( 0, 10 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 214.0
margin/right = 432.0
margin/bottom = 224.0

[node name="skin_label" type="Label" parent="tools/scroll/box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 228.0
margin/right = 432.0
margin/bottom = 242.0
text = "Skins"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="skin_separator" type="HSeparator" parent="tools/scroll/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 246.0
margin/right = 432.0
margin/bottom = 249.0

[node name="skin_buttons" type="ButtonGroup" parent="tools/scroll/box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 253.0
margin/right = 432.0
margin/bottom = 253.0
alignment = 0

[node name="anim_label" type="Label" parent="tools/scroll/box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 257.0
margin/right = 432.0
margin/bottom = 271.0
text = "Animations:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="anim_separator" type="HSeparator" parent="tools/scroll/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 275.0
margin/right = 432.0
margin/bottom = 278.0

[node name="anim_buttons" type="ButtonGroup" parent="tools/scroll/box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 282.0
margin/right = 432.0
margin/bottom = 282.0
alignment = 0

[node name="blend_label" type="Label" parent="tools/scroll/box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 286.0
margin/right = 432.0
margin/bottom = 300.0
text = "Blends:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="blend_separator" type="HSeparator" parent="tools/scroll/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 304.0
margin/right = 432.0
margin/bottom = 307.0

[node name="blend_box" type="VBoxContainer" parent="tools/scroll/box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 311.0
margin/right = 432.0
margin/bottom = 764.0
alignment = 0

[node name="blend_add" type="Button" parent="tools/scroll/box/blend_box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 432.0
margin/bottom = 20.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Add blend"
flat = false

[node name="content" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 452.0
margin/top = 0.0
margin/right = 1180.0
margin/bottom = 780.0

[node name="bg" type="TextureFrame" parent="content"]

visibility/self_opacity = 0.3
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 10.0
margin/bottom = 10.0
texture = ExtResource( 2 )
modulate = Color( 0.769531, 0.940582, 1, 1 )
expand = true
stretch_mode = 2

[node name="scroll" type="ScrollContainer" parent="content"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
scroll/horizontal = false
scroll/vertical = false

[node name="spine" type="Spine" parent="content/scroll"]

transform/pos = Vector2( 397.075, 424.965 )
playback/process_mode = 1
playback/speed = 1.0
playback/active = false
playback/skip_frames = 0
debug/bones = false
modulate = Color( 1, 1, 1, 1 )
flip_x = false
flip_y = false
fx_prefix = "fx/"
resource = null
playback/play = "[stop]"
playback/loop = true
playback/forward = true
playback/skin = ""
debug/region = false
debug/mesh = false
debug/skinned_mesh = false
debug/bounding_box = false


